--- a/core/vm/runtime/CMakeLists.txt
+++ b/core/vm/runtime/CMakeLists.txt
@@ -11,6 +11,7 @@ target_link_libraries(runtime
     actor
     blake2
     bls_provider
+    cgo_actors
     keystore
     proofs
     secp256k1_provider
