--- a/core/primitives/CMakeLists.txt
+++ b/core/primitives/CMakeLists.txt
@@ -11,4 +11,5 @@ add_subdirectory(resources)
 add_subdirectory(rle_bitset)
 add_subdirectory(sector)
 add_subdirectory(sector_file)
+add_subdirectory(stored_counter)
 add_subdirectory(tipset)
