--- a/core/miner/storage_fsm/CMakeLists.txt
+++ b/core/miner/storage_fsm/CMakeLists.txt
@@ -3,6 +3,13 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
+add_library(sector_stat
+        impl/sector_stat_impl.cpp
+        )
+target_link_libraries(sector_stat
+        sector
+        )
+
 add_library(sector_counter
         impl/sector_counter_impl.cpp
         )
@@ -47,5 +54,6 @@ target_link_libraries(storage_fsm
         api
         events
         precommit_policy
+        sector_stat
         sector_counter
         )
