--- a/core/miner/CMakeLists.txt
+++ b/core/miner/CMakeLists.txt
@@ -6,10 +6,18 @@
 add_subdirectory(storage_fsm)
 
 add_library(miner
+    miner.cpp
+    )
+target_link_libraries(miner
+    api
+    storage_fsm
+    )
+
+add_library(mining
     mining.cpp
     windowpost.cpp
     )
-target_link_libraries(miner
+target_link_libraries(mining
     cbor
     message
     rle_plus_codec
