--- a/core/node/CMakeLists.txt
+++ b/core/node/CMakeLists.txt
@@ -7,8 +7,18 @@ add_library(node
     blocksync.cpp
     hello.cpp
     peermgr.cpp
+    pubsub.cpp
     sync.cpp
     )
 target_link_libraries(node
     cbor_stream
+    )
+
+add_executable(node_main
+    main.cpp
+    )
+target_link_libraries(node_main
+    Boost::program_options
+    node
+    rpc
     )
