chain head change changed to api
Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

--- a/core/miner/storage_fsm/CMakeLists.txt
+++ b/core/miner/storage_fsm/CMakeLists.txt
@@ -32,7 +32,7 @@ add_library(events
 target_link_libraries(events
         logger
         tipset_cache
-        chain_store
+        api
         )
 
 add_library(storage_fsm
