Updated Local and Remote store Updated Index to support primary and non-primary storages
Signed-off-by: artyom-yurin <artem_yrin@mail.ru>

--- a/core/sector_storage/stores/CMakeLists.txt
+++ b/core/sector_storage/stores/CMakeLists.txt
@@ -13,6 +13,7 @@ target_link_libraries(sector_index
         outcome
         uri_parser
         Boost::filesystem
+        logger
         )
 
 add_library(store
