+ getStorage, setStorage functions for filesystem and in memory repo

--- a/core/storage/repository/CMakeLists.txt
+++ b/core/storage/repository/CMakeLists.txt
@@ -21,6 +21,7 @@ target_link_libraries(filesystem_repository
     keystore
     outcome
     repository
+    rpc
     )
 
 add_library(in_memory_repository
@@ -28,4 +29,8 @@ add_library(in_memory_repository
     )
 target_link_libraries(in_memory_repository
     repository
+    Boost::filesystem
+    rpc
+    ipfs_datastore_in_memory
+    config
     )
