--- a/test/testutil/storage/CMakeLists.txt
+++ b/test/testutil/storage/CMakeLists.txt
@@ -4,7 +4,7 @@
 add_library(base_fs_test
     base_fs_test.hpp
     base_fs_test.cpp
-    )
+        ../../core/storage/repository/in_memory_repository_test.cpp)
 target_link_libraries(base_fs_test
     Boost::filesystem
     Boost::boost
