--- a/test/core/storage/repository/CMakeLists.txt
+++ b/test/core/storage/repository/CMakeLists.txt
@@ -9,3 +9,12 @@ target_link_libraries(filesystem_repository_test
     base_fs_test
     secp256k1_provider
     )
+
+addtest(in_memory_repository_test
+        in_memory_repository_test.cpp
+)
+target_link_libraries(in_memory_repository_test
+        in_memory_repository
+        base_fs_test
+        secp256k1_provider
+        )
