--- a/core/sector_storage/stores/CMakeLists.txt
+++ b/core/sector_storage/stores/CMakeLists.txt
@@ -13,6 +13,14 @@ target_link_libraries(sector_index
         outcome
         uri_parser
         Boost::filesystem
+        logger
+        )
+
+add_library(storage_error
+        impl/storage_error.cpp
+        )
+target_link_libraries(storage_error
+        outcome
         )
 
 add_library(store
@@ -28,4 +36,5 @@ target_link_libraries(store
         rpc
         sector_index
         tarutil
+        storage_error
         )
