test-vectors (lotus 0.5.4)
Signed-off-by: turuslan <turuslan.devbox@gmail.com>

--- a/core/codec/json/CMakeLists.txt
+++ b/core/codec/json/CMakeLists.txt
@@ -3,6 +3,9 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_subdirectory(cbor)
-add_subdirectory(json)
-add_subdirectory(rle)
+add_library(json
+    json.cpp
+    )
+target_link_libraries(json
+    cid
+    )
