--- a/core/common/CMakeLists.txt
+++ b/core/common/CMakeLists.txt
@@ -20,8 +20,10 @@ target_link_libraries(blob
     hexutil
     )
 
-add_library(outcome INTERFACE)
-target_link_libraries(outcome INTERFACE
+add_library(outcome
+    outcome2.cpp
+    )
+target_link_libraries(outcome
     Boost::boost
     p2p::p2p
     )
@@ -60,5 +62,13 @@ add_library(todo_error
     todo_error.cpp
     )
 target_link_libraries(todo_error
+    outcome
+    )
+
+add_library(file
+    file.cpp
+    )
+target_link_libraries(file
+    buffer
     outcome
     )
