! moved getStat and getDiskUsage to repository
Signed-off-by: Igor Krasheninnikov <igor.krash@gmail.com>

--- a/core/storage/repository/CMakeLists.txt
+++ b/core/storage/repository/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(repository
 target_link_libraries(repository
     keystore
     outcome
+    storage_error
     )
 
 add_library(filesystem_repository
