Added implementation of SectorBlocks Added error for Provider
Signed-off-by: artyom-yurin <artem_yrin@mail.ru>

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -23,6 +23,7 @@ add_subdirectory(power)
 add_subdirectory(primitives)
 add_subdirectory(proofs)
 add_subdirectory(sector_storage)
+add_subdirectory(sectorblocks)
 add_subdirectory(storage)
 add_subdirectory(vm)
 
