--- a/core/storage/ipfs/CMakeLists.txt
+++ b/core/storage/ipfs/CMakeLists.txt
@@ -25,3 +25,4 @@ target_link_libraries(ipfs_datastore_leveldb
 
 add_subdirectory(merkledag)
 add_subdirectory(graphsync)
+add_subdirectory(api_ipfs_datastore)
