update test-vectors and specs-actors, add tipset test
Signed-off-by: turuslan <turuslan.devbox@gmail.com>

--- a/test/core/test_vectors/CMakeLists.txt
+++ b/test/core/test_vectors/CMakeLists.txt
@@ -10,6 +10,7 @@ target_link_libraries(test_vectors_test
     Boost::iostreams
     car
     file
+    interpreter
     ipfs_datastore_in_memory
     json
     state_tree
