--- a/core/codec/cbor/CMakeLists.txt
+++ b/core/codec/cbor/CMakeLists.txt
@@ -5,6 +5,7 @@
 
 add_library(cbor
     cbor_decode_stream.cpp
+    cbor_dump.cpp
     cbor_encode_stream.cpp
     cbor_errors.cpp
     cbor_resolve.cpp
