--- a/core/vm/CMakeLists.txt
+++ b/core/vm/CMakeLists.txt
@@ -4,6 +4,7 @@
 #
 
 add_subdirectory(actor)
+add_subdirectory(dvm)
 add_subdirectory(exit_code)
 add_subdirectory(interpreter)
 add_subdirectory(runtime)
