Added zipTar function
Signed-off-by: artyom-yurin <artem_yrin@mail.ru>

--- a/test/core/common/CMakeLists.txt
+++ b/test/core/common/CMakeLists.txt
@@ -44,4 +44,6 @@ addtest(tarutil_test
 target_link_libraries(tarutil_test
         tarutil
         base_fs_test
+        buffer
+        file
         )
