--- a/core/vm/actor/builtin/CMakeLists.txt
+++ b/core/vm/actor/builtin/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(payment_channel)
 add_subdirectory(reward)
 add_subdirectory(storage_power)
 add_subdirectory(verified_registry)
+add_subdirectory(system)
