--- a/core/sector_storage/CMakeLists.txt
+++ b/core/sector_storage/CMakeLists.txt
@@ -6,6 +6,16 @@
 add_subdirectory(stores)
 add_subdirectory(zerocomm)
 
+add_library(fetch_handler
+        impl/fetch_handler.cpp
+        )
+
+target_link_libraries(fetch_handler
+        outcome
+        store
+        logger
+        )
+
 add_library(worker
         impl/local_worker.cpp
         impl/worker_error.cpp
