--- a/core/sector_storage/CMakeLists.txt
+++ b/core/sector_storage/CMakeLists.txt
@@ -14,6 +14,8 @@ target_link_libraries(fetch_handler
         outcome
         store
         logger
+        tarutil
+        Boost::boost
         )
 
 add_library(worker
