--- a/core/node/CMakeLists.txt
+++ b/core/node/CMakeLists.txt
@@ -3,23 +3,25 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_library(node
-    blocksync.cpp
-    hello.cpp
-    peermgr.cpp
-    pubsub.cpp
-    sync.cpp
-    )
-target_link_libraries(node
-    cbor_stream
+add_library(sync
+    identify.cpp
+    say_hello.cpp
+    receive_hello.cpp
+    pubsub_gate.cpp
+    tipset_loader.cpp
+    blocksync_client.cpp
+    blocksync_server.cpp
+    subchain_loader.cpp
+#    syncer.cpp
+    interpret_job.cpp
+    chain_db.cpp
+    branches.cpp
+    index_db.cpp
+    index_db_backend.cpp
     )
 
-add_executable(node_main
-    main.cpp
-    )
-target_link_libraries(node_main
-    Boost::program_options
-    clock
-    node
-    rpc
-    )
+target_link_libraries(sync
+    cbor_stream
+    p2p::libp2p_sqlite
+    p2p::p2p_gossip
+    p2p::p2p_identify)
