--- a/core/markets/storage/client/CMakeLists.txt
+++ b/core/markets/storage/client/CMakeLists.txt
@@ -5,13 +5,12 @@
 
 add_library(storage_market_client
     impl/storage_market_client_impl.cpp
-    impl/client_data_transfer_request_validator.cpp
     impl/client_state_store.cpp
     )
 target_link_libraries(storage_market_client
     address
     blob
-    data_transfer_graphsync
+    data_transfer
     discovery
     fuhon_fsm
     outcome
