--- a/core/data_transfer/CMakeLists.txt
+++ b/core/data_transfer/CMakeLists.txt
@@ -3,13 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_subdirectory(impl)
-
 add_library(data_transfer
-    message_receiver.cpp
+    dt.cpp
     )
 target_link_libraries(data_transfer
-    p2p::p2p
-    logger
-    ipld_node
+    cbor_stream
+    graphsync
     )
