--- a/test/core/test_vectors/CMakeLists.txt
+++ b/test/core/test_vectors/CMakeLists.txt
@@ -5,6 +5,7 @@
 
 addtest(test_vectors_test
     test.cpp
+    fixed_randomness.cpp
     )
 target_link_libraries(test_vectors_test
     Boost::iostreams
