--- a/core/vm/actor/builtin/v0/payment_channel/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/payment_channel/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(payment_channel_actor
     )
 target_link_libraries(payment_channel_actor
     actor
+    array
     outcome
     signature
     )
