paych actor v2 is ready

--- a/core/markets/storage/provider/CMakeLists.txt
+++ b/core/markets/storage/provider/CMakeLists.txt
@@ -15,7 +15,7 @@ target_link_libraries(storage_market_provider
     fuhon_stored_ask
     outcome
     piece
-    market_actor
+    market_actor_v0
     todo_error
     piece_storage
     sectorblocks
