--- a/core/vm/actor/builtin/v0/market/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/market/CMakeLists.txt
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_library(market_actor
+add_library(market_actor_v0
     actor.cpp
     )
-target_link_libraries(market_actor
+target_link_libraries(market_actor_v0
     actor
     array
     balance_table
