--- a/core/vm/actor/builtin/v0/multisig/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/multisig/CMakeLists.txt
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_library(multisig_actor
+add_library(multisig_actor_v0
     multisig_actor.cpp
     )
-target_link_libraries(multisig_actor
+target_link_libraries(multisig_actor_v0
     actor
     outcome
     )
