--- a/test/core/vm/actor/builtin/v0/account/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v0/account/CMakeLists.txt
@@ -3,11 +3,11 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-addtest(account_actor_test
+addtest(account_actor_test_v0
     account_actor_test.cpp
     )
-target_link_libraries(account_actor_test
-    account_actor
+target_link_libraries(account_actor_test_v0
+    account_actor_v0
     state_tree
     ipfs_datastore_in_memory
     )
