--- a/core/vm/actor/builtin/v0/cron/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/cron/CMakeLists.txt
@@ -3,9 +3,9 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_library(cron_actor
+add_library(cron_actor_v0
     cron_actor.cpp
     )
-target_link_libraries(cron_actor
+target_link_libraries(cron_actor_v0
     actor
     )
