--- a/core/vm/actor/builtin/v0/init/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/init/CMakeLists.txt
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_library(init_actor
+add_library(init_actor_v0
     init_actor.cpp
     )
-target_link_libraries(init_actor
+target_link_libraries(init_actor_v0
     actor
     outcome
     hamt
