--- a/core/vm/actor/builtin/v0/storage_power/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/storage_power/CMakeLists.txt
@@ -3,12 +3,12 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_library(storage_power_actor
+add_library(storage_power_actor_v0
     storage_power_actor_state.cpp
     storage_power_actor_export.cpp
     policy.cpp
     )
-target_link_libraries(storage_power_actor
+target_link_libraries(storage_power_actor_v0
     actor
     block
     balance_table
