--- a/core/vm/actor/builtin/v0/system/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/system/CMakeLists.txt
@@ -3,9 +3,9 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_library(system_actor
+add_library(system_actor_v0
     system_actor.cpp
     )
-target_link_libraries(system_actor
+target_link_libraries(system_actor_v0
     actor
     )
