--- a/test/core/vm/actor/builtin/v0/cron/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v0/cron/CMakeLists.txt
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-addtest(cron_actor_test
+addtest(cron_actor_test_v0
     cron_actor_test.cpp
     )
-target_link_libraries(cron_actor_test
-    cron_actor
+target_link_libraries(cron_actor_test_v0
+    cron_actor_v0
     ipfs_datastore_in_memory
     )
