--- a/test/core/vm/actor/builtin/v0/multisig_actor/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v0/multisig_actor/CMakeLists.txt
@@ -3,9 +3,9 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-addtest(multisig_actor_test
+addtest(multisig_actor_test_v0
     multisig_actor_test.cpp
     )
-target_link_libraries(multisig_actor_test
-    multisig_actor
+target_link_libraries(multisig_actor_test_v0
+    multisig_actor_v0
     )
