Payment channel actor (#308)

--- a/core/vm/actor/CMakeLists.txt
+++ b/core/vm/actor/CMakeLists.txt
@@ -11,19 +11,25 @@ add_library(actor
     impl/invoker_impl.cpp
     )
 target_link_libraries(actor
-    account_actor
     address
     buffer
     cid
     exit_code
-    init_actor
-    market_actor
-    miner_actor
-    multisig_actor
-    storage_power_actor
-    cron_actor
-    reward_actor
-    payment_channel_actor
-    system_actor
+    account_actor_v0
+    account_actor_v2
+    account_actor_v3
+    init_actor_v0
+    market_actor_v0
+    miner_actor_v0
+    multisig_actor_v0
+    storage_power_actor_v0
+    cron_actor_v0
+    reward_actor_v0
+    payment_channel_actor_v0
+    payment_channel_actor_v2
+    payment_channel_actor_v3
+    system_actor_v0
+    system_actor_v2
+    system_actor_v3
     cgo_actors
     )
