--- a/core/vm/actor/builtin/v0/account/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/account/CMakeLists.txt
@@ -3,10 +3,10 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_library(account_actor
+add_library(account_actor_v0
     account_actor.cpp
     )
-target_link_libraries(account_actor
+target_link_libraries(account_actor_v0
     actor
     outcome
     )
