--- a/test/core/vm/actor/builtin/v0/payment_channel/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v0/payment_channel/CMakeLists.txt
@@ -3,11 +3,11 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-addtest(payment_channel_actor_test
+addtest(payment_channel_actor_test_v0
     payment_channel_actor_test.cpp
     )
-target_link_libraries(payment_channel_actor_test
+target_link_libraries(payment_channel_actor_test_v0
     ipfs_datastore_in_memory
-    payment_channel_actor
+    payment_channel_actor_v0
     state_tree
     )
