--- a/core/vm/actor/CMakeLists.txt
+++ b/core/vm/actor/CMakeLists.txt
@@ -24,6 +24,7 @@ target_link_libraries(actor
     multisig_actor_v0
     storage_power_actor_v0
     cron_actor_v0
+    cron_actor_v2
     reward_actor_v0
     payment_channel_actor_v0
     payment_channel_actor_v2
