Added bitvec functionality
Signed-off-by: artyom-yurin <artem_yrin@mail.ru>

--- a/test/core/primitives/CMakeLists.txt
+++ b/test/core/primitives/CMakeLists.txt
@@ -4,6 +4,7 @@
 #
 
 add_subdirectory(address)
+add_subdirectory(bitvec)
 add_subdirectory(chain_epoch)
 add_subdirectory(cid)
 add_subdirectory(piece)
