--- a/core/sector_storage/stores/CMakeLists.txt
+++ b/core/sector_storage/stores/CMakeLists.txt
@@ -16,15 +16,10 @@ target_link_libraries(sector_index
         logger
         )
 
-add_library(storage_error
-        impl/storage_error.cpp
-        )
-target_link_libraries(storage_error
-        outcome
-        )
-
 add_library(store
         impl/local_store.cpp
+        impl/storage_error.cpp
+        impl/storage_impl.cpp
         impl/store_error.cpp
         impl/remote_store.cpp
         )
@@ -37,6 +32,5 @@ target_link_libraries(store
         rpc
         sector_index
         tarutil
-        storage_error
         p2p::asio_scheduler
         )
