--- a/core/storage/leveldb/CMakeLists.txt
+++ b/core/storage/leveldb/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(leveldb
     leveldb_batch.cpp
     leveldb_error.cpp
     leveldb_cursor.cpp
+    prefix.cpp
     )
 target_link_libraries(leveldb
     leveldb::leveldb
