--- a/test/core/vm/actor/builtin/v0/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v0/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(init)
 add_subdirectory(market)
 add_subdirectory(multisig_actor)
 add_subdirectory(payment_channel)
+add_subdirectory(power)
