add power actor v2
Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

--- a/core/vm/actor/CMakeLists.txt
+++ b/core/vm/actor/CMakeLists.txt
@@ -23,6 +23,7 @@ target_link_libraries(actor
     miner_actor_v0
     multisig_actor_v0
     storage_power_actor_v0
+    storage_power_actor_v2
     cron_actor_v0
     cron_actor_v2
     reward_actor_v0
