--- a/core/vm/actor/builtin/v2/CMakeLists.txt
+++ b/core/vm/actor/builtin/v2/CMakeLists.txt
@@ -6,4 +6,5 @@
 add_subdirectory(account)
 add_subdirectory(cron)
 add_subdirectory(payment_channel)
+add_subdirectory(storage_power)
 add_subdirectory(system)
