--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,11 +53,10 @@ jobs:
       run: |
         set -e
         if [ "$RUNNER_OS" = "macOS" ]; then
-          brew install ninja libb2
-          brew install pkg-config
+          brew install ninja pkg-config libb2 hwloc
         else
-          sudo apt-get update || true
-          sudo apt-get install -y ninja-build python-setuptools pkg-config ocl-icd-* opencl-headers
+          sudo apt-get update
+          sudo apt-get install -y ninja-build python-setuptools pkg-config ocl-icd-* opencl-headers libhwloc-dev
         fi
 
         pip3 -V || sudo python3 -m pip install --upgrade pip
