--- a/.github/workflows/lsan.yml
+++ b/.github/workflows/lsan.yml
@@ -30,8 +30,8 @@ jobs:
         git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
     - name: install
       run: |
-        sudo apt-get update || true
-        sudo apt-get install -y ninja-build python-setuptools pkg-config ocl-icd-* opencl-headers
+        sudo apt-get update
+        sudo apt-get install -y ninja-build python-setuptools pkg-config ocl-icd-* opencl-headers libhwloc-dev
         sudo python3 -m pip install --upgrade pip
         sudo python3 -m pip install scikit-build cmake requests gitpython gcovr pyyaml
     - name: cmake
