--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ jobs:
         # 3 jobs in total
         os: [ubuntu-18.04, macOS-latest]
         compiler: [{
-          "cc": "gcc",
-          "cxx": "g++"
+          "cc": "gcc-10",
+          "cxx": "g++-10"
          }, {
           "cc": "clang",
           "cxx": "clang++"
@@ -26,7 +26,7 @@ jobs:
         exclude:
           - os: macOS-latest
             compiler:
-              cc: gcc
+              cc: gcc-10
         include:
           - os: macOS-latest
             env:
