--- a/test/core/vm/actor/builtin/v0/multisig_actor/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v0/multisig_actor/CMakeLists.txt
@@ -8,4 +8,6 @@ addtest(multisig_actor_test_v0
     )
 target_link_libraries(multisig_actor_test_v0
     multisig_actor_v0
+    ipfs_datastore_in_memory
+    state_tree
     )
