--- a/core/vm/actor/builtin/v0/multisig/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/multisig/CMakeLists.txt
@@ -4,6 +4,7 @@
 #
 
 add_library(multisig_actor_v0
+    multisig_actor_state.cpp
     multisig_actor.cpp
     )
 target_link_libraries(multisig_actor_v0
