Feature/power actor update 0.9.12 (#313)
* update power actor construct and add miner

Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

* update power actor UpdateClaimedPower

Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

* add storage power actor method EnrollCronEvent

Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

* add power actor v1

Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

* add power actor v2

Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

* storage power actor v0 tests

Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

* power actor tests

Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

* fix excessive ipld set

Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

* storage-power-actor - verify batch seals

Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

* minor pr issues

Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

* fix pr issues

Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

* do not ignore fatal errors

Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

--- a/core/vm/actor/builtin/v0/storage_power/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/storage_power/CMakeLists.txt
@@ -10,8 +10,10 @@ add_library(storage_power_actor_v0
     )
 target_link_libraries(storage_power_actor_v0
     actor
+    alpha_beta_filter
     block
     balance_table
+    const
     hamt
     multimap
     uvarint_key
