--- a/test/core/vm/actor/builtin/v0/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v0/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(market)
 add_subdirectory(multisig_actor)
 add_subdirectory(payment_channel)
 add_subdirectory(power)
+add_subdirectory(reward)
