--- a/core/vm/actor/CMakeLists.txt
+++ b/core/vm/actor/CMakeLists.txt
@@ -22,6 +22,7 @@ target_link_libraries(actor
     market_actor_v0
     miner_actor_v0
     multisig_actor_v0
+    multisig_actor_v2
     storage_power_actor_v0
     storage_power_actor_v2
     cron_actor_v0
