--- a/test/core/vm/actor/builtin/v2/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v2/CMakeLists.txt
@@ -4,5 +4,6 @@
 
 add_subdirectory(account)
 add_subdirectory(cron)
+add_subdirectory(multisig_actor)
 add_subdirectory(payment_channel)
 add_subdirectory(power)
