Added Runs utils and test for them
Signed-off-by: artyom-yurin <artem_yrin@mail.ru>

--- a/core/primitives/rle_bitset/CMakeLists.txt
+++ b/core/primitives/rle_bitset/CMakeLists.txt
@@ -8,3 +8,10 @@ target_link_libraries(rle_bitset INTERFACE
     cbor
     rle_plus_codec
     )
+
+add_library(runs_utils
+     runs_utils.cpp
+     )
+target_link_libraries(runs_utils
+     outcome
+     )
