Added Sector File structure and test for it
Signed-off-by: artyom-yurin <artem_yrin@mail.ru>

--- a/core/primitives/sector_file/CMakeLists.txt
+++ b/core/primitives/sector_file/CMakeLists.txt
@@ -6,4 +6,10 @@ add_library(sector_file
 
 target_link_libraries(sector_file
         sector
+        piece
+        runs_utils
+        logger
+        piece_data
+        comm_cid
+        proofs
         )
