--- a/test/core/vm/actor/builtin/v0/reward/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v0/reward/CMakeLists.txt
@@ -4,8 +4,10 @@
 #
 
 addtest(reward_actor_v0_test
+    reward_actor_v0_test.cpp
     reward_actor_calculus_v0_test.cpp
     )
 target_link_libraries(reward_actor_v0_test
     reward_actor_v0
+    ipfs_datastore_in_memory
     )
