--- a/core/vm/actor/builtin/v2/CMakeLists.txt
+++ b/core/vm/actor/builtin/v2/CMakeLists.txt
@@ -5,6 +5,8 @@
 
 add_subdirectory(account)
 add_subdirectory(cron)
+add_subdirectory(miner)
 add_subdirectory(payment_channel)
+add_subdirectory(reward)
 add_subdirectory(storage_power)
 add_subdirectory(system)
