--- a/test/core/vm/actor/builtin/v2/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v2/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(account)
 add_subdirectory(cron)
 add_subdirectory(payment_channel)
 add_subdirectory(power)
+add_subdirectory(reward)
