Feature/multisig actor (#316)
multisig actor

Signed-off-by: Mikhail Tagirov <dev.mikhail.tagirov@gmail.com>
Co-authored-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

--- a/test/core/vm/actor/builtin/v2/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v2/CMakeLists.txt
@@ -4,6 +4,7 @@
 
 add_subdirectory(account)
 add_subdirectory(cron)
+add_subdirectory(multisig_actor)
 add_subdirectory(payment_channel)
 add_subdirectory(power)
 add_subdirectory(reward)
