--- a/core/miner/main/CMakeLists.txt
+++ b/core/miner/main/CMakeLists.txt
@@ -18,5 +18,12 @@ target_link_libraries(miner_main
     rpc
     store
 
+    chain_events
+    data_transfer
+    ipfs_datastore_leveldb
+    pieceio
+    retrieval_market_provider
+    storage_market_provider
+
     ipfs_datastore_in_memory
     )
