Updated sector server
Signed-off-by: ortyomka <iurin.art@gmail.com>

--- a/core/sector_storage/CMakeLists.txt
+++ b/core/sector_storage/CMakeLists.txt
@@ -15,6 +15,7 @@ target_link_libraries(fetch_handler
         store
         logger
         tarutil
+        rpc
         Boost::boost
         )
 
