verified registry actor v2
Signed-off-by: Mikhail Tagirov <dev.mikhail.tagirov@gmail.com>

--- a/core/vm/actor/CMakeLists.txt
+++ b/core/vm/actor/CMakeLists.txt
@@ -38,5 +38,6 @@ target_link_libraries(actor
     system_actor_v2
     system_actor_v3
     verified_registry_actor_v0
+    verified_registry_actor_v2
     cgo_actors
     )
