--- a/core/vm/actor/builtin/v2/CMakeLists.txt
+++ b/core/vm/actor/builtin/v2/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(payment_channel)
 add_subdirectory(reward)
 add_subdirectory(storage_power)
 add_subdirectory(system)
+add_subdirectory(verified_registry)
