--- a/core/vm/actor/builtin/v2/verified_registry/CMakeLists.txt
+++ b/core/vm/actor/builtin/v2/verified_registry/CMakeLists.txt
@@ -3,11 +3,11 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-add_library(verified_registry_actor_v0
-    verified_registry_actor_utils.cpp
+add_library(verified_registry_actor_v2
     verified_registry_actor.cpp
     )
-target_link_libraries(verified_registry_actor_v0
+target_link_libraries(verified_registry_actor_v2
     actor
     outcome
+    verified_registry_actor_v0
     )
