miner actor constructor
Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

--- a/core/vm/actor/builtin/v0/miner/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/miner/CMakeLists.txt
@@ -4,12 +4,16 @@
 #
 
 add_library(miner_actor_v0
+    deadline_info.cpp
     miner_actor.cpp
+    miner_actor_state.cpp
     )
 target_link_libraries(miner_actor_v0
+    actor
     address
     array
     cbor
+    exit_code
     map
     rle_bitset
     sector
