verified registry actor v3
Signed-off-by: Mikhail Tagirov <dev.mikhail.tagirov@gmail.com>

--- a/core/vm/actor/CMakeLists.txt
+++ b/core/vm/actor/CMakeLists.txt
@@ -39,5 +39,6 @@ target_link_libraries(actor
     system_actor_v3
     verified_registry_actor_v0
     verified_registry_actor_v2
+    verified_registry_actor_v3
     cgo_actors
     )
