--- a/core/vm/actor/builtin/v3/CMakeLists.txt
+++ b/core/vm/actor/builtin/v3/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(account)
 add_subdirectory(multisig)
 add_subdirectory(payment_channel)
 add_subdirectory(system)
+add_subdirectory(verified_registry)
