Feature/sector server (#292)
* Added zipTar function

Signed-off-by: artyom-yurin <artem_yrin@mail.ru>

* Upgraded server
Added handler for manager
Added some util functions

Signed-off-by: artyom-yurin <artem_yrin@mail.ru>

* Fixed Manager Mock

Signed-off-by: artyom-yurin <artem_yrin@mail.ru>

* Reorganized Server

Signed-off-by: artyom-yurin <artem_yrin@mail.ru>

* Made more informative names in tarutils

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Updated sector server

Signed-off-by: ortyomka <iurin.art@gmail.com>

--- a/core/sector_storage/CMakeLists.txt
+++ b/core/sector_storage/CMakeLists.txt
@@ -6,6 +6,19 @@
 add_subdirectory(stores)
 add_subdirectory(zerocomm)
 
+add_library(fetch_handler
+        impl/fetch_handler.cpp
+        )
+
+target_link_libraries(fetch_handler
+        outcome
+        store
+        logger
+        tarutil
+        rpc
+        Boost::boost
+        )
+
 add_library(worker
         impl/local_worker.cpp
         impl/worker_error.cpp
@@ -54,4 +67,5 @@ target_link_libraries(manager
         store
         sector_index
         sector
+        tarutil
         )
