--- a/core/vm/actor/builtin/v2/miner/CMakeLists.txt
+++ b/core/vm/actor/builtin/v2/miner/CMakeLists.txt
@@ -5,6 +5,7 @@
 
 add_library(miner_actor_v2
     miner_actor.cpp
+    miner_actor_state.cpp
     )
 target_link_libraries(miner_actor_v2
     miner_actor_v0
