Verified registry actor (#323)
verified registry actor v0, v2, v3

Signed-off-by: Mikhail Tagirov <dev.mikhail.tagirov@gmail.com>

Co-authored-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

--- a/test/core/vm/actor/builtin/v0/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v0/CMakeLists.txt
@@ -11,3 +11,4 @@ add_subdirectory(multisig_actor)
 add_subdirectory(payment_channel)
 add_subdirectory(power)
 add_subdirectory(reward)
+add_subdirectory(verified_registry)
