--- a/core/storage/car/CMakeLists.txt
+++ b/core/storage/car/CMakeLists.txt
@@ -5,7 +5,7 @@ add_library(car
     car.cpp
     )
 target_link_libraries(car
+    file
     ipld_traverser
     p2p::p2p_uvarint
-    Boost::iostreams
     )
