--- a/core/vm/actor/builtin/v3/CMakeLists.txt
+++ b/core/vm/actor/builtin/v3/CMakeLists.txt
@@ -4,6 +4,8 @@
 #
 
 add_subdirectory(account)
+add_subdirectory(miner)
 add_subdirectory(multisig)
 add_subdirectory(payment_channel)
+add_subdirectory(storage_power)
 add_subdirectory(system)
