Feature/miner actor construct v3 (#327)
Signed-off-by: Alexey-N-Chernyshov <alexey.n.chernyshov@gmail.com>

Co-authored-by: Ruslan Tushov <turuslan@users.noreply.github.com>

--- a/core/vm/actor/builtin/v3/CMakeLists.txt
+++ b/core/vm/actor/builtin/v3/CMakeLists.txt
@@ -4,7 +4,9 @@
 #
 
 add_subdirectory(account)
+add_subdirectory(miner)
 add_subdirectory(multisig)
 add_subdirectory(payment_channel)
+add_subdirectory(storage_power)
 add_subdirectory(system)
 add_subdirectory(verified_registry)
