--- a/core/vm/actor/builtin/v2/CMakeLists.txt
+++ b/core/vm/actor/builtin/v2/CMakeLists.txt
@@ -5,6 +5,7 @@
 
 add_subdirectory(account)
 add_subdirectory(cron)
+add_subdirectory(init)
 add_subdirectory(miner)
 add_subdirectory(multisig)
 add_subdirectory(payment_channel)
