--- a/test/core/vm/actor/builtin/v3/CMakeLists.txt
+++ b/test/core/vm/actor/builtin/v3/CMakeLists.txt
@@ -3,6 +3,8 @@
 #
 
 add_subdirectory(account)
+add_subdirectory(cron)
+add_subdirectory(init)
 add_subdirectory(multisig_actor)
 add_subdirectory(payment_channel)
 add_subdirectory(verified_registry)
