--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -22,6 +22,7 @@ add_subdirectory(payment_channel_manager)
 add_subdirectory(power)
 add_subdirectory(primitives)
 add_subdirectory(proofs)
+add_subdirectory(remote_worker)
 add_subdirectory(sector_storage)
 add_subdirectory(sectorblocks)
 add_subdirectory(storage)
