--- a/core/vm/runtime/CMakeLists.txt
+++ b/core/vm/runtime/CMakeLists.txt
@@ -16,6 +16,8 @@ target_link_libraries(runtime
     bls_provider
     cgo_actors
     dvm
+    ipfs_datastore_error
+    ipld_traverser
     keystore
     message
     proofs
