Divided Api and removed dependencies from the old
Signed-off-by: ortyomka <iurin.art@gmail.com>

--- a/core/remote_worker/CMakeLists.txt
+++ b/core/remote_worker/CMakeLists.txt
@@ -7,7 +7,8 @@ add_executable(remote_worker_main
         main.cpp
         )
 target_link_libraries(remote_worker_main
+        Boost::program_options
+        remote_index
         fetch_handler
-
         worker
         )
