--- a/core/sector_storage/CMakeLists.txt
+++ b/core/sector_storage/CMakeLists.txt
@@ -33,6 +33,16 @@ target_link_libraries(worker
         logger
         )
 
+add_library(remote_worker
+        impl/local_worker.cpp
+        impl/worker_error.cpp
+        )
+
+target_link_libraries(remote_worker
+        worker
+        rpc
+        )
+
 add_library(scheduler
         impl/scheduler_impl.cpp
         )
