--- a/core/vm/CMakeLists.txt
+++ b/core/vm/CMakeLists.txt
@@ -9,4 +9,5 @@ add_subdirectory(exit_code)
 add_subdirectory(interpreter)
 add_subdirectory(runtime)
 add_subdirectory(state)
+add_subdirectory(toolchain)
 add_subdirectory(message)
