--- a/core/vm/runtime/CMakeLists.txt
+++ b/core/vm/runtime/CMakeLists.txt
@@ -5,10 +5,6 @@
 
 add_library(runtime
     circulating.cpp
-    impl/actor_context/actor_context_v0.cpp
-    impl/actor_context/actor_context_v2.cpp
-    impl/actor_context/actor_context_v3.cpp
-    impl/actor_context/actor_context_creator.cpp
     impl/env.cpp
     impl/runtime_impl.cpp
     impl/runtime_error.cpp
@@ -28,4 +24,5 @@ target_link_libraries(runtime
     secp256k1_provider
     tipset
     signature
+    toolchain
     )
