--- a/core/remote_worker/CMakeLists.txt
+++ b/core/remote_worker/CMakeLists.txt
@@ -11,4 +11,5 @@ target_link_libraries(remote_worker_main
         remote_index
         fetch_handler
         worker
+        proof_param_provider
         )
