--- a/core/vm/actor/builtin/v2/verified_registry/CMakeLists.txt
+++ b/core/vm/actor/builtin/v2/verified_registry/CMakeLists.txt
@@ -5,6 +5,7 @@
 
 add_library(verified_registry_actor_v2
     verified_registry_actor.cpp
+    verified_registry_actor_utils.cpp
     )
 target_link_libraries(verified_registry_actor_v2
     actor
