Remote worker and Separate APIs (#334)
* Divided Api and removed dependencies from the old

Signed-off-by: ortyomka <iurin.art@gmail.com>

* Remote Worker main

Signed-off-by: ortyomka <iurin.art@gmail.com>

--- a/core/sector_storage/CMakeLists.txt
+++ b/core/sector_storage/CMakeLists.txt
@@ -33,6 +33,15 @@ target_link_libraries(worker
         logger
         )
 
+add_library(remote_worker
+        impl/remote_worker.cpp
+        )
+
+target_link_libraries(remote_worker
+        worker
+        rpc
+        )
+
 add_library(scheduler
         impl/scheduler_impl.cpp
         )
