--- a/core/vm/actor/builtin/v0/multisig/CMakeLists.txt
+++ b/core/vm/actor/builtin/v0/multisig/CMakeLists.txt
@@ -5,8 +5,8 @@
 
 add_library(multisig_actor_v0
     multisig_actor_state.cpp
-    impl/multisig_utils_impl_v0.cpp
     multisig_actor.cpp
+    multisig_actor_utils.cpp
     )
 target_link_libraries(multisig_actor_v0
     actor
