--- a/core/vm/actor/builtin/v2/multisig/CMakeLists.txt
+++ b/core/vm/actor/builtin/v2/multisig/CMakeLists.txt
@@ -4,8 +4,8 @@
 #
 
 add_library(multisig_actor_v2
-    impl/multisig_utils_impl_v2.cpp
     multisig_actor.cpp
+    multisig_actor_utils.cpp
     )
 target_link_libraries(multisig_actor_v2
     actor
