Added tests for sectorblocks
Signed-off-by: ortyomka <iurin.art@gmail.com>

--- a/test/core/CMakeLists.txt
+++ b/test/core/CMakeLists.txt
@@ -21,6 +21,7 @@ endif ()
 
 add_subdirectory(power)
 add_subdirectory(primitives)
+add_subdirectory(sectorblocks)
 add_subdirectory(serialization)
 add_subdirectory(storage)
 add_subdirectory(test_vectors)
