--- a/core/vm/actor/builtin/CMakeLists.txt
+++ b/core/vm/actor/builtin/CMakeLists.txt
@@ -3,6 +3,7 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
+add_subdirectory(states)
 add_subdirectory(v0)
 add_subdirectory(v2)
 add_subdirectory(v3)
