Added tests for selectors Added fetch handler and remote worker adater to Code Coverage ignore list
Signed-off-by: ortyomka <iurin.art@gmail.com>

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,3 +1,5 @@
 ignore:
   - "test" # exclude 'test' directory from coverage
   - "core/sector_storage/stores/impl/remote_*"
+  - "core/sector_storage/impl/remote_*"
+  - "core/sector_storage/impl/fetch_handler.cpp"
