--- a/codecov.yml
+++ b/codecov.yml
@@ -3,3 +3,4 @@ ignore:
   - "core/sector_storage/stores/impl/remote_*"
   - "core/sector_storage/impl/remote_*"
   - "core/sector_storage/impl/fetch_handler.cpp"
+  - "core/sector_storage/zerocomm/*"
